--- a/chinavis2022_survey/multimedia.tex
+++ b/chinavis2022_survey/multimedia.tex
@@ -130,15 +130,15 @@ Besides, there are three application technologies, which are 3D printing, smart 
 %工业4.0的核心是智能生产技术和智能生产模式，旨在通过“物联网”和“务联网”，把产品、机器、资源和人联系在一起，推动各环节数据共享，实现产品全生命周期和全制造流程的数字化。
 The core of Industry 4.0 is smart production technology and model. It aims to connect products, machines, resources and people through IoT and internet of services (IoS), promote data sharing in all aspects, and realize the digitalization of the whole product life cycle and the whole manufacturing process~\cite{Cardoso2010,Gubbi2013}.
 %制造业全流程大致可以分为三个主要阶段：设计与研发、生产测试和销售服务。
-The entire manufacturing process can be broadly divided into three main phases: design \& development, production \& testing, and sales \& service~\cite{Zhou2019}.
-%三个阶段分别有不同的任务和数据。
-Each of the three phases has its own tasks and data.
+The entire manufacturing process can be broadly divided into three main phases: \textit{Design \& Development}, \textit{Production \& Testing}, and \textit{Sales \& Service}~\cite{Zhou2019}.
+%三个阶段分别有会产生不同数据的任务。
+Each of the three phases has tasks that will generate different data.
 %在设计研发阶段，除了产品样式及功能的设计研发之外，还包括工厂、店铺的选址规划。
-In design \& development phase, in addition to product appearances and functions, it also includes the site selection and construction planning of factories and stores.
+In \textit{Design \& Development} phase, in addition to product appearances and functions, it also includes the site selection and construction planning of factories and stores.
 %在生产测试阶段，原材料配送顺序，工作人员及设备排班，产品质量和工厂流水线的监测分析等都是研究的热门方向。
-In production \& testing phase, raw material distribution sequence, staff and equipment scheduling, product quality and factory line monitoring and analysis are all hot directions of research.
+In \textit{Production \& Testing} phase, raw material distribution sequence, staff and equipment scheduling, product quality and factory line monitoring and analysis are all hot directions of research.
 %在销售服务阶段，产品宣传和广告设计、销售数据及反馈意见分析等同样非常重要。
-In sales \& service phase, product promotion and advertising design, sales data and feedback analysis are also very important.
+In \textit{Sales \& Service} phase, product promotion and advertising design~\cite{Guo2021}, sales data and feedback analysis are also very important.
 %上述阶段产生的多媒体数据包括了表格、文字、图片、视频和信号。
 The multimedia data generated in the above phase includes tables, text, images, videos, and sensing signals.
 
@@ -157,17 +157,11 @@ Finally, we conclude with a discussion of existing work and provide suggestions 
 
 % 相关综述
 \section{Related Surveys}
-%在本节，我们将相关综述进行分类并讨论。
-In this section, we categorize and discuss relevant surveys.
-%
-%我们搜集到的调查中，研究人员对现有工作的分类法和调查对象不尽相同。
-The taxonomy and research subjects in the surveys we collected are different.
+%在本节，我们回顾了与制造业相关的调查。
+In this section, we review surveys related to manufacturing.
+%这些高质量的调查从智能制造系统、大数据处理技术、制造业大数据生态、设备维护及检测，以及数字孪生工厂进行了系统性的总结。
+These high-quality surveys provided systematic summaries and guidance on \textit{Smart manufacturing systems}(SMSs), \textit{big data processing technology}, \textit{manufacturing big data ecosystem}, \textit{equipment maintenance \& monitoring}, and \textit{digital twin factory}~\cite{Baboli2021,Chhikara2022,Cui2020,Park2020,Qu2019}.
 
-%Gehlot等人回顾了对工业发展具有里程碑意义的重要产品和服务。他们总结了工业4.0的六个主要方面，分析了工业4.0的不足之处，并以此提出了工业5.0的主要发展方向，预测了工业6.0的主要焦点。
-Gehlot et al.~\cite{Gehlot2022} reviewed the important products and services that have been milestones for industrial development. They summarized the six main aspects and analyzed the shortcomings of Industry 4.0, accordingly proposed the main directions of Industry 5.0 and predicted the main focus of Industry 6.0.
-
-%研究对象包括智能制造系统、大数据处理技术、制造业大数据生态、设备维护及监测以及数字孪生工厂。
-The research subjects include \textit{Smart manufacturing systems}(SMSs), \textit{big data processing technology}, \textit{manufacturing big data ecosystem}, \textit{equipment maintenance and monitoring}, and \textit{digital twin factory}.
 %Qu等人对智能制造的发展、定义、目标、功能需求、业务需求、技术需求、构成要素进行了概述。
 Qu et al.~\cite{Qu2019} provided an overview of the development, definition, objectives, functional requirements, business requirements, technical requirements, and components of SMSs.
 %Chhikara等人针对特征抽取和特征选择两个任务，比较分析了不同的降维技术。
@@ -651,7 +645,7 @@ In this paper, we review research related to the visualization and visual analys
 %我们提出了一个新的分类法，将多媒体数据分为表格文本数据、传感信号数据、以及图像和视频数据，根据它们的类型。然后，我们从可视化技术、交互式分析方法和应用领域等方面介绍了不同的多媒体数据。如图1所示，我们用不同的颜色对分类学基础进行编码。
 We propose a novel taxonomy that classifies multimedia data into tabular text data, sensing signal data, and image \& video data by data type, and then discusses them separately in terms of visualization techniques, interactive analysis methods, and application areas. As shown in Figure~\ref{fig:table}, we encode the classification basis with different colors.
 %此外，通过对相关工作的分析和比较，我们确定了制造业多媒体数据可视化与可视分析的趋势和最近的发展。
-Moreover, through analysis and comparison of related work, we identify trends and recent developments in multimedia data visualization and visual analytics in manufacturing.
+Moreover, through analysis and comparison of related work, we identify trends and recent developments in multimedia data visualization and visual analytics in manufacturing~\cite{Gehlot2022}.
 %接下来，我们将从“先进技术的引入”，“通用可视分析方案和流程”、“多种多媒体数据融合可视分析”对关键挑战和未来研究进行讨论和总结。
 Next, we will discuss and summarize the key challenges and future research in the areas of ``Advanced Technology Usage", ``Common Visual Analytics Solutions and Processes", and ``Multi-Source and Multi-Type Data Fusion Visual Analytics".
 
